--- a/docs/trips_analysis.ipynb
+++ b/docs/trips_analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +69,44 @@
     "t1 = dw.Table('data/yellow_tripdata_2010-01.parquet')\n",
     "t1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'avg_func' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m t2 \u001b[38;5;241m=\u001b[39m dw\u001b[38;5;241m.\u001b[39mTable(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata/yellow_tripdata_2010-02.parquet\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;32m      2\u001b[0m t1\u001b[38;5;241m.\u001b[39mdo(\n",
+      "\u001b[0;32m----> 3\u001b[0m     \u001b[43mavg_func\u001b[49m,\n",
+      "\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mselect int(log10(num))\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[1;32m      5\u001b[0m )\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'avg_func' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "t2 = dw.Table('data/yellow_tripdata_2010-02.parquet')\n",
+    "t1.do(\n",
+    "    avg_func,\n",
+    "    'select int(log10(num))'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -335,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -345,29 +383,29 @@
        "│      hexid      │       amount       │  num   │\n",
        "│     varchar     │       double       │ int64  │\n",
        "├─────────────────┼────────────────────┼────────┤\n",
-       "│ 882a10725bfffff │  10.28860403952643 │ 421287 │\n",
-       "│ 882a10089bfffff │  10.68603411867983 │ 252882 │\n",
-       "│ 882a100899fffff │  10.31212280293725 │ 210679 │\n",
-       "│ 882a1072c9fffff │ 10.324864870461472 │ 386333 │\n",
-       "│ 882a10728bfffff │  15.06309367831045 │  42283 │\n",
-       "│ 882a107281fffff │ 14.549411366436932 │  73849 │\n",
-       "│ 882a100893fffff │  9.661533032430288 │ 426051 │\n",
-       "│ 882a1008d9fffff │  11.12186782282635 │  12801 │\n",
-       "│ 882a1072c7fffff │ 11.649603050363377 │ 203779 │\n",
-       "│ 882a1072c3fffff │  11.38762527914247 │  89560 │\n",
-       "│        ·        │                ·   │      · │\n",
-       "│        ·        │                ·   │      · │\n",
-       "│        ·        │                ·   │      · │\n",
-       "│ 882a100043fffff │              25.75 │      1 │\n",
-       "│ 882a1034ebfffff │               16.7 │      1 │\n",
-       "│ 882a1066dbfffff │               11.0 │      1 │\n",
-       "│ 882a10564bfffff │                9.2 │      1 │\n",
-       "│ 882a2e5331fffff │                6.9 │      1 │\n",
-       "│ 882a104357fffff │               18.5 │      1 │\n",
-       "│ 882a13c345fffff │               50.5 │      1 │\n",
-       "│ 882a139ad1fffff │               16.3 │      1 │\n",
-       "│ 882a10cc15fffff │  8.599999999999998 │      1 │\n",
-       "│ 882a102c61fffff │  8.199999999999998 │      1 │\n",
+       "│ 882a100d65fffff │ 10.816309067189671 │ 666127 │\n",
+       "│ 882a100d45fffff │ 10.594611812368374 │ 185619 │\n",
+       "│ 882a1008bbfffff │   9.67052480701034 │ 288487 │\n",
+       "│ 882a100889fffff │ 11.282130774389216 │ 105877 │\n",
+       "│ 882a100f57fffff │ 28.707747238240927 │  71965 │\n",
+       "│ 882a100897fffff │  8.755456601197546 │ 140626 │\n",
+       "│ 882a100da5fffff │   12.8694763361526 │  11114 │\n",
+       "│ 882a107299fffff │ 14.289010873562011 │  38074 │\n",
+       "│ 882a100d01fffff │  17.76678872614291 │   4506 │\n",
+       "│ 882a100da7fffff │ 12.546433862433865 │  15120 │\n",
+       "│        ·        │                 ·  │      · │\n",
+       "│        ·        │                 ·  │      · │\n",
+       "│        ·        │                 ·  │      · │\n",
+       "│ 882a105031fffff │                9.5 │      1 │\n",
+       "│ 882ba010c5fffff │                6.4 │      1 │\n",
+       "│ 882a10269bfffff │                4.7 │      1 │\n",
+       "│ 882a10cd19fffff │               25.0 │      1 │\n",
+       "│ 882a10aa87fffff │                6.3 │      1 │\n",
+       "│ 882a139a17fffff │                6.2 │      1 │\n",
+       "│ 8844d9db67fffff │               14.3 │      1 │\n",
+       "│ 882a1020d3fffff │               10.1 │      1 │\n",
+       "│ 88754a9007fffff │                6.3 │      1 │\n",
+       "│ 880ecb2da9fffff │                6.6 │      1 │\n",
        "├─────────────────┴────────────────────┴────────┤\n",
        "│ 8594 rows (20 shown)                3 columns │\n",
        "└───────────────────────────────────────────────┘"
@@ -392,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -419,29 +457,29 @@
        "│      hexid      │       amount       │  num   │\n",
        "│     varchar     │       double       │ int64  │\n",
        "├─────────────────┼────────────────────┼────────┤\n",
-       "│ 882a100893fffff │   9.66153303243029 │ 426051 │\n",
-       "│ 882a10725bfffff │  10.28860403952643 │ 421287 │\n",
-       "│ 882a100883fffff │  9.985855459480879 │ 222512 │\n",
-       "│ 882a10089bfffff │ 10.686034118679828 │ 252882 │\n",
-       "│ 882a1072c7fffff │ 11.649603050363375 │ 203779 │\n",
-       "│ 882a107281fffff │ 14.549411366436933 │  73849 │\n",
-       "│ 882a10728bfffff │ 15.063093678310452 │  42283 │\n",
-       "│ 882a1072c3fffff │ 11.387625279142474 │  89560 │\n",
-       "│ 882a100899fffff │ 10.312122802937253 │ 210679 │\n",
-       "│ 882a100881fffff │ 10.705657822863863 │  76890 │\n",
+       "│ 882a100c5bfffff │ 11.838936484490405 │   8801 │\n",
+       "│ 882a100d61fffff │  9.976872721919229 │ 733622 │\n",
+       "│ 882a100891fffff │   9.18618488146143 │ 366927 │\n",
+       "│ 882a100d6bfffff │  9.630784061738924 │ 304249 │\n",
+       "│ 882a10089dfffff │  9.739667707746658 │  39062 │\n",
+       "│ 882a10728dfffff │ 14.671127785208624 │  61306 │\n",
+       "│ 882a100f31fffff │ 11.943408321238513 │   4134 │\n",
+       "│ 882a100d3bfffff │ 12.113482432831416 │   6774 │\n",
+       "│ 882a100dedfffff │ 11.801164322817701 │  31572 │\n",
+       "│ 882a100e3bfffff │ 13.195209713024283 │    453 │\n",
        "│        ·        │                ·   │      · │\n",
        "│        ·        │                ·   │      · │\n",
        "│        ·        │                ·   │      · │\n",
-       "│ 882a106819fffff │              156.0 │      1 │\n",
-       "│ 882a102331fffff │               28.8 │      1 │\n",
-       "│ 882a106817fffff │                6.6 │      1 │\n",
-       "│ 882a101b1bfffff │                4.7 │      1 │\n",
-       "│ 882a10110bfffff │               10.1 │      1 │\n",
-       "│ 882a1392d1fffff │               10.8 │      1 │\n",
-       "│ 882a104b53fffff │                9.0 │      1 │\n",
-       "│ 882a10d4c5fffff │               10.8 │      1 │\n",
-       "│ 882a139987fffff │              12.35 │      1 │\n",
-       "│ 882b8d61c5fffff │               13.2 │      1 │\n",
+       "│ 882a10d681fffff │              14.75 │      1 │\n",
+       "│ 882a1015e1fffff │               85.0 │      1 │\n",
+       "│ 882a101561fffff │                6.0 │      1 │\n",
+       "│ 882aa8926dfffff │               11.9 │      1 │\n",
+       "│ 882a1674d3fffff │                6.2 │      1 │\n",
+       "│ 882a13d941fffff │                9.0 │      1 │\n",
+       "│ 882aa30293fffff │               12.3 │      1 │\n",
+       "│ 882a101597fffff │               15.8 │      1 │\n",
+       "│ 882a104339fffff │                9.6 │      1 │\n",
+       "│ 882a108995fffff │             138.25 │      1 │\n",
        "├─────────────────┴────────────────────┴────────┤\n",
        "│ 8594 rows (20 shown)                3 columns │\n",
        "└───────────────────────────────────────────────┘"
@@ -457,6 +495,40 @@
     "avg_func(t1)\n",
     "t1.do(avg_func)\n",
     "t1.do([avg_func])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌────────────┬──────────────┐\n",
+       "│ num_digits │ count_star() │\n",
+       "│   int32    │    int64     │\n",
+       "├────────────┼──────────────┤\n",
+       "│          1 │         5907 │\n",
+       "│          2 │         1784 │\n",
+       "│          3 │          619 │\n",
+       "│          4 │          165 │\n",
+       "│          5 │           58 │\n",
+       "│          6 │           43 │\n",
+       "│          7 │           18 │\n",
+       "└────────────┴──────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1.do(\n",
+    "    avg_func,\n",
+    "    'select cast(log10(num)+1 as int) as num_digits, count(*) group by 1 order by 1'\n",
+    ")"
    ]
   },
   {
