--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -2,6 +2,4 @@
 title: "darkwing"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+{{< include ../readme.md >}}
