--- a/notebooks/trips_analysis.ipynb
+++ b/notebooks/trips_analysis.ipynb
@@ -931,6 +931,185 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌─────────────────┬────────────────────┬────────────────────┬─────────────────────┐\n",
+       "│      hexid      │      fare_jan      │      fare_feb      │     fare_change     │\n",
+       "│     varchar     │       double       │       double       │       double        │\n",
+       "├─────────────────┼────────────────────┼────────────────────┼─────────────────────┤\n",
+       "│ 882a1071adfffff │  69.73084615384616 │ 58.737914798206276 │ -10.992931355639882 │\n",
+       "│ 882a100c01fffff │ 27.110503597122307 │ 20.741372549019605 │  -6.369131048102702 │\n",
+       "│ 882a100e37fffff │  33.03063551401869 │  28.06555765595463 │   -4.96507785806406 │\n",
+       "│ 882a1072e7fffff │  42.25520958083832 │  38.42423076923077 │  -3.830978811607551 │\n",
+       "│ 882a1008e9fffff │ 17.742466666666665 │ 14.009843750000002 │ -3.7326229166666636 │\n",
+       "│ 882a1008e7fffff │ 14.852932330827068 │ 11.121284403669724 │ -3.7316479271573435 │\n",
+       "│ 882a107207fffff │ 16.860051282051284 │ 13.165116279069766 │ -3.6949350029815182 │\n",
+       "│ 882a100e85fffff │ 29.665849999999995 │ 26.645454545454545 │ -3.0203954545454508 │\n",
+       "│ 882a100cc1fffff │ 18.814318181818184 │  15.84008695652174 │ -2.9742312252964442 │\n",
+       "│ 882a10705bfffff │  25.10495283018868 │ 22.228385650224215 │ -2.8765671799644643 │\n",
+       "│        ·        │          ·         │          ·         │           ·         │\n",
+       "│        ·        │          ·         │          ·         │           ·         │\n",
+       "│        ·        │          ·         │          ·         │           ·         │\n",
+       "│ 882a10723bfffff │  36.69252998909488 │ 42.577538896746816 │   5.885008907651937 │\n",
+       "│ 882a1072e3fffff │ 22.588899676375405 │ 28.593956521739123 │   6.005056845363718 │\n",
+       "│ 882a107239fffff │ 30.491762376237617 │ 36.845988023952096 │   6.354225647714479 │\n",
+       "│ 882a107231fffff │  25.71543147208122 │ 33.134042553191485 │   7.418611081110264 │\n",
+       "│ 882a103b61fffff │  38.67921925133689 │  46.58243243243243 │   7.903213181095538 │\n",
+       "│ 882a100ee5fffff │ 13.650664869721476 │ 21.770178571428573 │   8.119513701707097 │\n",
+       "│ 882a107209fffff │ 16.478663594470046 │ 24.767259036144576 │    8.28859544167453 │\n",
+       "│ 882a100813fffff │ 16.437430167597768 │ 25.611982758620687 │    9.17455259102292 │\n",
+       "│ 882a100d03fffff │ 12.004190371991244 │ 21.602025227750524 │    9.59783485575928 │\n",
+       "│ 882a100ebbfffff │  39.36631964809386 │  53.30473029045641 │  13.938410642362555 │\n",
+       "├─────────────────┴────────────────────┴────────────────────┴─────────────────────┤\n",
+       "│ 426 rows (20 shown)                                                   4 columns │\n",
+       "└─────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import darkwing as dw\n",
+    "\n",
+    "core = [\n",
+    "    'select *, h3_latlng_to_cell(pickup_latitude, pickup_longitude, 8) as hexid',\n",
+    "    'select hexid, avg(total_amount) as amount, count(*) as num group by 1',\n",
+    "    'select h3_h3_to_string(hexid) as hexid, amount, num',\n",
+    "]\n",
+    "\n",
+    "core_with_filters = [\n",
+    "    'where (pickup_longitude != 0) and (pickup_latitude != 0)',\n",
+    "    'where total_amount > 0',\n",
+    "    core,\n",
+    "    'where num > 100',\n",
+    "]\n",
+    "\n",
+    "db = dw.Database(\n",
+    "    t1 = dw.Table('data/yellow_tripdata_2010-01.parquet').do(core_with_filters),\n",
+    "    t2 = dw.Table('data/yellow_tripdata_2010-02.parquet').do(core_with_filters),\n",
+    ")\n",
+    "\n",
+    "db.do(\"\"\"\n",
+    "    select\n",
+    "        hexid,\n",
+    "        t1.amount  as  fare_jan,\n",
+    "        t2.amount  as  fare_feb,\n",
+    "    from        t1\n",
+    "    inner join  t2\n",
+    "    using       (hexid)\n",
+    "\"\"\",\n",
+    "    'select *, fare_feb - fare_jan as fare_change',\n",
+    "    'order by fare_change',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = dw.Table('data/yellow_tripdata_2010-01.parquet').do(core_with_filters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌───────────────────────────┐\n",
+      "│         PROJECTION        │\n",
+      "│    ────────────────────   │\n",
+      "│           hexid           │\n",
+      "│           amount          │\n",
+      "│            num            │\n",
+      "│                           │\n",
+      "│          ~0 Rows          │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│           FILTER          │\n",
+      "│    ────────────────────   │\n",
+      "│        (num > 100)        │\n",
+      "│                           │\n",
+      "│          ~0 Rows          │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│       HASH_GROUP_BY       │\n",
+      "│    ────────────────────   │\n",
+      "│         Groups: #0        │\n",
+      "│                           │\n",
+      "│        Aggregates:        │\n",
+      "│          avg(#1)          │\n",
+      "│        count_star()       │\n",
+      "│                           │\n",
+      "│          ~1 Rows          │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│         PROJECTION        │\n",
+      "│    ────────────────────   │\n",
+      "│           hexid           │\n",
+      "│        total_amount       │\n",
+      "│                           │\n",
+      "│        ~594551 Rows       │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│         PROJECTION        │\n",
+      "│    ────────────────────   │\n",
+      "│        total_amount       │\n",
+      "│           hexid           │\n",
+      "│                           │\n",
+      "│        ~594551 Rows       │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│           FILTER          │\n",
+      "│    ────────────────────   │\n",
+      "│ ((pickup_longitude != 0.0)│\n",
+      "│  AND (pickup_latitude != 0│\n",
+      "│            .0))           │\n",
+      "│                           │\n",
+      "│        ~594551 Rows       │\n",
+      "└─────────────┬─────────────┘\n",
+      "┌─────────────┴─────────────┐\n",
+      "│       PARQUET_SCAN        │\n",
+      "│    ────────────────────   │\n",
+      "│         Function:         │\n",
+      "│        PARQUET_SCAN       │\n",
+      "│                           │\n",
+      "│        Projections:       │\n",
+      "│      pickup_longitude     │\n",
+      "│      pickup_latitude      │\n",
+      "│        total_amount       │\n",
+      "│                           │\n",
+      "│       ~2972755 Rows       │\n",
+      "└───────────────────────────┘\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t1.rel.explain())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
